# data-science-template

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  jupyter_docker.sh  pyproject.toml  setup.cfg
notebooks/: README.md
tests/: test_ds_project.py  test_version.py
